use gap instead of margins to fix overflow issues

--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,25 @@
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
-    padding: 0;
+    padding: 2rem;
     background-color: #f4f4f4;
     box-sizing: border-box;
 }
 
 .section {
     display: grid;
-    /* gap: 2rem; */
+    gap: 1rem;
     align-items: stretch;
     margin-bottom: 2rem;
-    width: 100vw;
+    width: 100%;
 }
 
 .section.cols-2-60-40 {
-    grid-template-columns: 60% 40%;
+    grid-template-columns: 3fr 2fr;
 }
 
 .section.cols-2-40-60 {
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 2fr 3fr;
 }
 
 .section.cols-2 {
@@ -27,11 +27,11 @@ body {
 }
 
 .section.cols-3-50-25-25 {
-    grid-template-columns: 50% 25% 25%;
+    grid-template-columns: 2fr 1fr 1fr;
 }
 
 .section.cols-3-30-30-60 {
-    grid-template-columns: 30% 30% 60%;
+    grid-template-columns: 1.5fr 1.5fr 3fr;
 }
 
 .video-section, .info-section {
@@ -54,9 +54,13 @@ body {
     width: 100%;
     aspect-ratio: 16/9;
     overflow: hidden;
-    margin: 1rem;
+
     border-radius: 8px;
     background: #000;
+}
+
+.info-section {
+  
 }
 
 .aspect-ratio-4-5 {
